--- a/Assignment_2/Assignment_2_2.ipynb
+++ b/Assignment_2/Assignment_2_2.ipynb
@@ -391,15 +391,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "risGAwz7_J29",
-        "outputId": "777c66e3-6961-43de-93d0-f62da41485fc"
+        "outputId": "04c4cfcb-2930-4fc1-d97f-bdf2bd3e523e"
       },
-      "execution_count": 11,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "ResNet11(\n",
+            "ResNet18(\n",
             "  (conv1): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
             "  (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
             "  (layer1): Sequential(\n",
@@ -408,6 +408,7 @@
             "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
             "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
             "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "      (dropout): Identity()\n",
             "      (shortcut): Sequential()\n",
             "    )\n",
             "    (1): BasicBlock(\n",
@@ -415,6 +416,7 @@
             "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
             "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
             "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "      (dropout): Identity()\n",
             "      (shortcut): Sequential()\n",
             "    )\n",
             "  )\n",
@@ -424,6 +426,7 @@
             "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
             "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
             "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "      (dropout): Identity()\n",
             "      (shortcut): Sequential(\n",
             "        (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
             "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -434,6 +437,7 @@
             "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
             "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
             "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "      (dropout): Identity()\n",
             "      (shortcut): Sequential()\n",
             "    )\n",
             "  )\n",
@@ -443,6 +447,7 @@
             "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
             "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
             "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "      (dropout): Identity()\n",
             "      (shortcut): Sequential(\n",
             "        (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
             "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -453,6 +458,7 @@
             "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
             "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
             "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "      (dropout): Identity()\n",
             "      (shortcut): Sequential()\n",
             "    )\n",
             "  )\n",
@@ -462,6 +468,7 @@
             "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
             "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
             "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "      (dropout): Identity()\n",
             "      (shortcut): Sequential(\n",
             "        (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
             "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -472,11 +479,11 @@
             "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
             "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
             "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "      (dropout): Identity()\n",
             "      (shortcut): Sequential()\n",
             "    )\n",
             "  )\n",
             "  (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n",
-            "  (dropout): Dropout(p=0, inplace=False)\n",
             "  (linear): Linear(in_features=512, out_features=10, bias=True)\n",
             ")\n"
           ]
