--- a/Assignment_3/Assignment_3_1.ipynb
+++ b/Assignment_3/Assignment_3_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP76N5r6UaIzw5ga0ohDg7L",
+      "authorship_tag": "ABX9TyMQaRp8+68vCOFGIg8HFcuh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,29 +177,19 @@
         "        return output\n",
         "\n",
         "\n",
-        "# Defining the RNN model\n",
+        "# Defining the Lstm model\n",
         "class CharLstm(nn.Module):\n",
         "    def __init__(self, input_size, hidden_size, output_size):\n",
         "        super(CharLstm, self).__init__()\n",
         "        self.hidden_size = hidden_size\n",
-        "        #This line takes the input tensor x, which contains indices of characters, and passes it through an embedding layer (self.embedding).\n",
-        "        #The embedding layer converts these indices into dense vectors of fixed size.\n",
-        "        #These vectors are learned during training and can capture semantic similarities between characters.\n",
-        "        #The result is a higher-dimensional representation of the input sequence, where each character index is replaced by its corresponding embedding vector.\n",
         "        self.embedding = nn.Embedding(input_size, hidden_size)\n",
         "        self.LSTM = nn.LSTM(hidden_size, hidden_size, batch_first=True)\n",
         "        self.fc = nn.Linear(hidden_size, output_size)\n",
         "\n",
         "    def forward(self, x):\n",
         "        embedded = self.embedding(x)\n",
-        "        #The RNN layer returns two outputs:\n",
-        "        #1- the output tensor containing the output of the RNN at each time step for each sequence in the batch,\n",
-        "        #2-the hidden state (_) of the last time step (which is not used in this line, hence the underscore).\n",
         "        output, _ = self.LSTM(embedded)\n",
-        "        #The RNN's output contains the outputs for every time step,\n",
-        "        #but for this task, we're only interested in the output of the last time step because we're predicting the next character after the sequence.\n",
-        "        #output[:, -1, :] selects the last time step's output for every sequence in the batch (-1 indexes the last item in Python).\n",
-        "        output = self.fc(output[:, -1, :])  # Get the output of the last RNN cell\n",
+        "        output = self.fc(output[:, -1, :])\n",
         "        return output\n",
         "\n",
         "class CharGRU(nn.Module):\n",
@@ -212,14 +202,8 @@
         "\n",
         "    def forward(self, x):\n",
         "        embedded = self.embedding(x)\n",
-        "        #The RNN layer returns two outputs:\n",
-        "        #1- the output tensor containing the output of the RNN at each time step for each sequence in the batch,\n",
-        "        #2-the hidden state (_) of the last time step (which is not used in this line, hence the underscore).\n",
         "        output, _ = self.gru(embedded)\n",
-        "        #The RNN's output contains the outputs for every time step,\n",
-        "        #but for this task, we're only interested in the output of the last time step because we're predicting the next character after the sequence.\n",
-        "        #output[:, -1, :] selects the last time step's output for every sequence in the batch (-1 indexes the last item in Python).\n",
-        "        output = self.fc(output[:, -1, :])  # Get the output of the last RNN cell\n",
+        "        output = self.fc(output[:, -1, :])\n",
         "        return output\n"
       ],
       "metadata": {
